dist/1.0/bin/sample/retrieveUnpackaged/objects/Historical_Commissions_Quota__c.object
<CustomObject>
    <description>List of realised Commissions Quotas</description>
    <fields>
        <fullName>HFrom_Date__c</fullName>
        <description>First day of Period</description>
        <label>HFrom_Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Opportunites_IDs__c</fullName>
        <description>Field storing Ids of included opportunities into this quota.</description>
        <inlineHelpText>Field storing Ids of included opportunities into this quota.</inlineHelpText>
        <label>Included Opportunites IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Manager Name</description>
        <inlineHelpText>Name of Manager</inlineHelpText>
        <label>Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <description>Relation between Quota and Quota Attainment</description>
        <inlineHelpText>Relation between Quota and Quota Attainment</inlineHelpText>
        <label>Percent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>Period of Quota</description>
        <inlineHelpText>Period of Quota</inlineHelpText>
        <label>Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Attainment__c</fullName>
        <description>Sum Stored in described Period by Salesman</description>
        <inlineHelpText>Sum Stored in described Period by Salesman</inlineHelpText>
        <label>Quota Attainment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>Target for this Quota Attainment</description>
        <inlineHelpText>Target for this Quota Attainment</inlineHelpText>
        <label>Quota</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesman_Id__c</fullName>
        <description>Id of salesman</description>
        <inlineHelpText>Id of salesman</inlineHelpText>
        <label>Salesman Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesman_Name__c</fullName>
        <description>Name of Salesman</description>
        <inlineHelpText>Name of Salesman</inlineHelpText>
        <label>Salesman Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of Quota Attainment</description>
        <inlineHelpText>Stage of Quota Attainment</inlineHelpText>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Historical Commissions Quota</label>
    <nameField>
        <label>Historical Commissions Quota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Commissions Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>